# cognitio

./: .gitignore  Cargo.toml
examples/: basic.rs  tensors.rs
src/: lib.rs  trainer.rs
src/activations/: elu.rs  exp.rs  identity.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs  softplus.rs  softsign.rs  swish.rs  tanh.rs
src/callbacks/: mod.rs
src/constraints/: mod.rs  none.rs  positive.rs
src/datasets/: mnist.rs  mod.rs
src/initializers/: constant.rs  mod.rs
src/layers/: activation.rs  dense.rs  embedding.rs  merge.rs  mod.rs  softmax.rs  split.rs
src/layers/convolution/: conv.rs  conv1d.rs  conv2d.rs  conv3d.rs  mod.rs
src/layers/deconvolution/: deconv1d.rs  deconv2d.rs  deconv3d.rs  mod.rs
src/layers/pooling/: mod.rs  pooling.rs  pooling1d.rs  pooling2d.rs  pooling3d.rs
src/losses/: mod.rs  square.rs
src/metrics/: mod.rs
src/model/: mod.rs  model_trait.rs  model_tuple.rs  sequential.rs
src/optimizers/: mini_batch.rs  mod.rs  sgd.rs
src/regularizers/: l1.rs  l2.rs  mod.rs  none.rs
src/schedules/: exponential_decay.rs  inverse_time_decay.rs  mod.rs  polynomial_decay.rs
src/tensor/: mod.rs  shape.rs
src/tensor/iter/: iter.rs  iter_mut.rs  mod.rs
src/tensor/view/: mod.rs  view.rs  view_mut.rs
