[package]
name = "cognitio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_traits = { path = "../num_traits" }
void = { path = "../void", features = ["std", "num_traits"] }

rand = "*"
reqwest = { version = "*", default-features = false, optional = true, features = ["blocking"] }
crc32fast = { version = "*", features = ["std", "nightly"] }
flate2 = { version = "*", optional = true }

[dev-dependencies]
measure = { path = "../measure" }

[features]
datasets = ["reqwest", "flate2"]
